alignment + delete console.log + fix bug of undefined values + add the button See More for the pairwise view.

--- a/imports/ui/singleGenePage/alignment/seq-similarity.scss
+++ b/imports/ui/singleGenePage/alignment/seq-similarity.scss
@@ -16,6 +16,10 @@
     // border: 1px solid red;
 }
 
+.table-hit {
+    width: 100%;
+}
+
 .title-query-sequences {
     text-align: center;
     vertical-align: middle;
